# FastAPIProject1

./: .gitignore  Makefile  pyproject.toml  structure.txt
src/: .env-example  entrypoint.sh
src/app/: main.py
src/app/api_v1/: __init__.py
src/app/api_v1/users/: crud.py  exceptions.py  models.py  schemas.py  views.py
src/app/core/: config.py
src/app/core/db/: __init__.py  db_helper.py
src/bot/: handlers.py  keyboards.py  main.py  my_requests.py
src/site/: main.py
src/site/api_v1/: __init__.py
src/site/api_v1/resources/: crud.py  schemas.py  views.py
src/site/api_v1/users/: crud.py  schemas.py  views.py
src/site/core/: config.py
src/site/core/models/: __init__.py  db_helper.py  resources.py  users.py
src/site/frontend/: package-lock.json  package.json
src/site/frontend/quasar-project/: README.md  package-lock.json  package.json  quasar.config.js
src/site/users/: crud.py  schemas.py  views.py
